# logseq-chat

./: .gitignore  Justfile  README.md  mypy.ini  pyproject.toml
logseq_chat/: bm25.py  event_handler.py  index.py  loader.py  main.py  splitter.py  vector.py
tests/: test_bm25.py  test_index.py  test_vector.py
